2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(getRegisteredKeyStrokes): Implemented.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(verifyInputWhenFocusTarget): Initialise to true.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* java/beans/VetoableChangeSupport.java
	(addVetoableChangeListener(VetoableChangeListener)): Do nothing for
	null listener,
	(addVetoableChangeListener(String, VetoableChangeListener)): Do nothing
	for null property name and/or listener,
	* javax/swing/JComponent.java
	(getListeners): Handle VetoableChangeListener.class as a special case,
	(getVetoableChangeListeners): Fetch these from the 
	vetoableChangeSupport object.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(componentPopupMenu): New field,
	(inheritsPopupMenu): New field,
	(getInheritsPopupMenu): Implemented,
	(setInheritsPopupMenu): Likewise,
	(getComponentPopupMenu): Likewise,
	(setComponentPopupMenu): Likewise,
	* javax/swing/JLabel.java
	(JLabel(String, Icon, int)): Set inheritsPopupMenu to true.

2006-06-28  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/crypto/key/dh/GnuDHPublicKey.java (str): New field.
	(toString): New method.
	* gnu/javax/crypto/key/dh/GnuDHPrivateKey.java (str): New field.
	(toString): New method.
	* gnu/javax/crypto/key/dh/GnuDHKey.java (str): New field.
	(toString): New method.
	* gnu/javax/crypto/key/dh/DHKeyPairPKCS8Codec.java (encodePrivateKey):
	Handle case when Q is null.
	(decodePrivateKey): Likewise.
	* gnu/javax/crypto/key/dh/DHKeyPairX509Codec.java (encodePublicKey):
	Likewise.
	(decodePublicKey): Likewise.
	* gnu/javax/crypto/jce/GnuCrypto.java (run): Added AlgorithmParameters
	aliases for all block ciphers.
	* gnu/javax/crypto/jce/DiffieHellmanImpl.java (result): Changed to byte[].
	(engineDoPhase): Compute fully the shared secret.
	(checkState): New method.