@@ -247,12 +247,13 @@ public final class LocalSocket extends Socket
 
   public void setSoTimeout (int i) throws SocketException
   {
-    throw new SocketException ("local sockets do not support this option");
+    // Ignore.
   }
 
   public int getSoTimeout () throws SocketException
   {
-    throw new SocketException ("local sockets do not support this option");
+    // We don't support timeout, so we return 0.
+    return 0;
   }
 
   public void setSendBufferSize (int i) throws SocketException
