@@ -1,3 +1,9 @@
+2006-06-28  Roman Kennke  <kennke@aicas.com>
+
+	* gnu/java/net/local/LocalSocket.java
+	(setSoTimeout): Don't throw exception and ignore request.
+	(getSoTimeout): Don't throw exception and always return 0.
+
 2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/JComponent.java
